tests/machine/x/fs/map_membership.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:48Z
open System

let m: System.Collections.Generic.IDictionary<string, int> = dict [("a", 1); ("b", 2)]
printfn "%s" (m.ContainsKey "a")
printfn "%s" (m.ContainsKey "c")
